[tool.poetry]
name = "kyberReserve"
version = "0.1.0"
description = "Tools for access, management and analysis for Kyber Reserve"
authors = ["Chris Liatas <chris@liatas.com>"]
readme = "README.md"
packages = [
    { include = "kyberReserve" },
    { include = "kyberReserve/**/*.py" },
    { include = "kyberReserve/py.typed" }
]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
aiohttp = "^3.9.3"
yarl = "^1.9.4"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
